sandbox/output
TicketDispenserTest.java:13: error: cannot find symbol
        assertEquals(1, newTicketTurnNumber - previousTicketTurnNumber);
                        ^
  symbol:   variable newTicketTurnNumber
  location: class TicketDispenserTest
TicketDispenserTest.java:13: error: cannot find symbol
        assertEquals(1, newTicketTurnNumber - previousTicketTurnNumber);
                                              ^
  symbol:   variable previousTicketTurnNumber
  location: class TicketDispenserTest
2 errors
